@@ -105,137 +105,137 @@ enum GeanyKeyGroupID
 /* These IDs are used to lookup a keybinding; keybindings can be added in any order. */
 enum GeanyKeyBindingID
 {
-	GEANY_KEYS_FILE_NEW,						/**< Keybinding. */
-	GEANY_KEYS_FILE_OPEN,						/**< Keybinding. */
-	GEANY_KEYS_FILE_OPENSELECTED,				/**< Keybinding. */
-	GEANY_KEYS_FILE_SAVE,						/**< Keybinding. */
-	GEANY_KEYS_FILE_SAVEAS,						/**< Keybinding. */
-	GEANY_KEYS_FILE_SAVEALL,					/**< Keybinding. */
-	GEANY_KEYS_FILE_PRINT,						/**< Keybinding. */
-	GEANY_KEYS_FILE_CLOSE,						/**< Keybinding. */
-	GEANY_KEYS_FILE_CLOSEALL,					/**< Keybinding. */
-	GEANY_KEYS_FILE_RELOAD,						/**< Keybinding. */
-	GEANY_KEYS_FILE_OPENLASTTAB,				/**< Keybinding. */
-	GEANY_KEYS_PROJECT_PROPERTIES,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_UNDO,						/**< Keybinding. */
-	GEANY_KEYS_EDITOR_REDO,						/**< Keybinding. */
-	GEANY_KEYS_EDITOR_DELETELINE,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_DUPLICATELINE,			/**< Keybinding. */
 	GEANY_KEYS_EDITOR_TRANSPOSELINE,			/**< Keybinding. */
-	GEANY_KEYS_EDITOR_SCROLLTOLINE,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_SCROLLLINEUP,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_SCROLLLINEDOWN,			/**< Keybinding. */
-	GEANY_KEYS_EDITOR_COMPLETESNIPPET,			/**< Keybinding. */
-	GEANY_KEYS_EDITOR_SUPPRESSSNIPPETCOMPLETION, /**< Keybinding. */
-	GEANY_KEYS_EDITOR_SNIPPETNEXTCURSOR,		/**< Keybinding. */
-	GEANY_KEYS_EDITOR_CONTEXTACTION,			/**< Keybinding. */
-	GEANY_KEYS_EDITOR_AUTOCOMPLETE,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_CALLTIP,					/**< Keybinding. */
-	GEANY_KEYS_EDITOR_MACROLIST,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_DELETELINETOEND,			/**< Keybinding. */
-	GEANY_KEYS_EDITOR_WORDPARTCOMPLETION,		/**< Keybinding. */
-	GEANY_KEYS_EDITOR_MOVELINEUP,				/**< Keybinding. */
-	GEANY_KEYS_EDITOR_MOVELINEDOWN,				/**< Keybinding. */
-	GEANY_KEYS_CLIPBOARD_CUT,					/**< Keybinding. */
-	GEANY_KEYS_CLIPBOARD_COPY,					/**< Keybinding. */
-	GEANY_KEYS_CLIPBOARD_PASTE,					/**< Keybinding. */
-	GEANY_KEYS_CLIPBOARD_CUTLINE,				/**< Keybinding. */
-	GEANY_KEYS_CLIPBOARD_COPYLINE,				/**< Keybinding. */
-	GEANY_KEYS_SELECT_ALL,						/**< Keybinding. */
-	GEANY_KEYS_SELECT_WORD,						/**< Keybinding. */
-	GEANY_KEYS_SELECT_LINE,						/**< Keybinding. */
-	GEANY_KEYS_SELECT_PARAGRAPH,				/**< Keybinding. */
-	GEANY_KEYS_SELECT_WORDPARTLEFT,				/**< Keybinding. */
-	GEANY_KEYS_SELECT_WORDPARTRIGHT,			/**< Keybinding. */
-	GEANY_KEYS_FORMAT_TOGGLECASE,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_COMMENTLINETOGGLE,		/**< Keybinding. */
-	GEANY_KEYS_FORMAT_COMMENTLINE,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_UNCOMMENTLINE,			/**< Keybinding. */
-	GEANY_KEYS_FORMAT_INCREASEINDENT,			/**< Keybinding. */
-	GEANY_KEYS_FORMAT_DECREASEINDENT,			/**< Keybinding. */
-	GEANY_KEYS_FORMAT_INCREASEINDENTBYSPACE,	/**< Keybinding. */
-	GEANY_KEYS_FORMAT_DECREASEINDENTBYSPACE,	/**< Keybinding. */
-	GEANY_KEYS_FORMAT_AUTOINDENT,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_SENDTOCMD1,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_SENDTOCMD2,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_SENDTOCMD3,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_SENDTOVTE,				/**< Keybinding. */
-	GEANY_KEYS_FORMAT_REFLOWPARAGRAPH,			/**< Keybinding. */
-	GEANY_KEYS_INSERT_DATE,						/**< Keybinding. */
-	GEANY_KEYS_INSERT_ALTWHITESPACE,			/**< Keybinding. */
-	GEANY_KEYS_SETTINGS_PREFERENCES,			/**< Keybinding. */
-	GEANY_KEYS_SETTINGS_PLUGINPREFERENCES,		/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_REMOVE_ERROR_INDICATORS, /**< Keybinding. */
+	GEANY_KEYS_FOCUS_SEARCHBAR,					/**< Keybinding. */
 	GEANY_KEYS_SEARCH_FIND,						/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDNEXT,					/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDPREVIOUS,				/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDINFILES,				/**< Keybinding. */
-	GEANY_KEYS_SEARCH_REPLACE,					/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDNEXTSEL,				/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDPREVSEL,				/**< Keybinding. */
-	GEANY_KEYS_SEARCH_NEXTMESSAGE,				/**< Keybinding. */
-	GEANY_KEYS_SEARCH_PREVIOUSMESSAGE,			/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDUSAGE,				/**< Keybinding. */
-	GEANY_KEYS_SEARCH_FINDDOCUMENTUSAGE,		/**< Keybinding. */
-	GEANY_KEYS_SEARCH_MARKALL,					/**< Keybinding. */
-	GEANY_KEYS_GOTO_FORWARD,					/**< Keybinding. */
-	GEANY_KEYS_GOTO_BACK,						/**< Keybinding. */
-	GEANY_KEYS_GOTO_LINE,						/**< Keybinding. */
-	GEANY_KEYS_GOTO_LINESTART,					/**< Keybinding. */
-	GEANY_KEYS_GOTO_LINEEND,					/**< Keybinding. */
-	GEANY_KEYS_GOTO_MATCHINGBRACE,				/**< Keybinding. */
-	GEANY_KEYS_GOTO_TOGGLEMARKER,				/**< Keybinding. */
+	GEANY_KEYS_FILE_SAVEALL,					/**< Keybinding. */
 	GEANY_KEYS_GOTO_NEXTMARKER,					/**< Keybinding. */
-	GEANY_KEYS_GOTO_PREVIOUSMARKER,				/**< Keybinding. */
-	GEANY_KEYS_GOTO_PREVWORDPART,				/**< Keybinding. */
-	GEANY_KEYS_GOTO_NEXTWORDPART,				/**< Keybinding. */
-	GEANY_KEYS_GOTO_TAGDEFINITION,				/**< Keybinding. */
-	GEANY_KEYS_GOTO_TAGDECLARATION,				/**< Keybinding. */
-	GEANY_KEYS_GOTO_LINEENDVISUAL,				/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_SWITCHTABLEFT,			/**< Keybinding. */
+	GEANY_KEYS_VIEW_ZOOMOUT,					/**< Keybinding. */
+	GEANY_KEYS_GOTO_LINE,						/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_TOGGLEFOLD,				/**< Keybinding. */
+	GEANY_KEYS_BUILD_COMPILE,					/**< Keybinding. */
+	GEANY_KEYS_EDITOR_SCROLLTOLINE,				/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_UNFOLDALL,				/**< Keybinding. */
+	GEANY_KEYS_GOTO_MATCHINGBRACE,				/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDDOCUMENTUSAGE,		/**< Keybinding. */
+	GEANY_KEYS_CLIPBOARD_PASTE,					/**< Keybinding. */
+	GEANY_KEYS_BUILD_MAKE,						/**< Keybinding. */
+	GEANY_KEYS_INSERT_ALTWHITESPACE,			/**< Keybinding. */
+	GEANY_KEYS_EDITOR_SCROLLLINEDOWN,			/**< Keybinding. */
 	GEANY_KEYS_VIEW_TOGGLEALL,					/**< Keybinding. */
 	GEANY_KEYS_VIEW_FULLSCREEN,					/**< Keybinding. */
-	GEANY_KEYS_VIEW_MESSAGEWINDOW,				/**< Keybinding. */
-	GEANY_KEYS_VIEW_SIDEBAR,					/**< Keybinding. */
-	GEANY_KEYS_VIEW_ZOOMIN,						/**< Keybinding. */
-	GEANY_KEYS_VIEW_ZOOMOUT,					/**< Keybinding. */
-	GEANY_KEYS_VIEW_ZOOMRESET,					/**< Keybinding. */
-	GEANY_KEYS_FOCUS_EDITOR,					/**< Keybinding. */
+	GEANY_KEYS_GOTO_LINEEND,					/**< Keybinding. */
+	GEANY_KEYS_EDITOR_CALLTIP,					/**< Keybinding. */
+	GEANY_KEYS_FILE_PRINT,						/**< Keybinding. */
+	GEANY_KEYS_EDITOR_DUPLICATELINE,			/**< Keybinding. */
 	GEANY_KEYS_FOCUS_SCRIBBLE,					/**< Keybinding. */
-	GEANY_KEYS_FOCUS_VTE,						/**< Keybinding. */
-	GEANY_KEYS_FOCUS_SEARCHBAR,					/**< Keybinding. */
-	GEANY_KEYS_FOCUS_SIDEBAR,					/**< Keybinding. */
-	GEANY_KEYS_FOCUS_COMPILER,					/**< Keybinding. */
-	GEANY_KEYS_FOCUS_MESSAGES,					/**< Keybinding. */
-	GEANY_KEYS_FOCUS_MESSAGE_WINDOW,			/**< Keybinding. */
-	GEANY_KEYS_FOCUS_SIDEBAR_DOCUMENT_LIST,		/**< Keybinding. */
-	GEANY_KEYS_FOCUS_SIDEBAR_SYMBOL_LIST,		/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_SWITCHTABLEFT,			/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_SWITCHTABRIGHT,			/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_SWITCHTABLASTUSED,		/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_MOVETABLEFT,			/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_MOVETABRIGHT,			/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_MOVETABFIRST,			/**< Keybinding. */
-	GEANY_KEYS_NOTEBOOK_MOVETABLAST,			/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_REPLACETABS,			/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_REPLACESPACES,			/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_TOGGLEFOLD,				/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_FOLDALL,				/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_UNFOLDALL,				/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_RELOADTAGLIST,			/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_LINEWRAP,				/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_LINEBREAK,				/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_REMOVE_MARKERS,			/**< Keybinding. */
-	GEANY_KEYS_DOCUMENT_REMOVE_ERROR_INDICATORS, /**< Keybinding. */
-	GEANY_KEYS_BUILD_COMPILE,					/**< Keybinding. */
-	GEANY_KEYS_BUILD_LINK,						/**< Keybinding. */
-	GEANY_KEYS_BUILD_MAKE,						/**< Keybinding. */
-	GEANY_KEYS_BUILD_MAKEOWNTARGET,				/**< Keybinding. */
-	GEANY_KEYS_BUILD_MAKEOBJECT,				/**< Keybinding. */
-	GEANY_KEYS_BUILD_NEXTERROR,					/**< Keybinding. */
-	GEANY_KEYS_BUILD_PREVIOUSERROR,				/**< Keybinding. */
-	GEANY_KEYS_BUILD_RUN,						/**< Keybinding. */
-	GEANY_KEYS_BUILD_OPTIONS,					/**< Keybinding. */
 	GEANY_KEYS_TOOLS_OPENCOLORCHOOSER,			/**< Keybinding. */
+	GEANY_KEYS_SEARCH_PREVIOUSMESSAGE,			/**< Keybinding. */
+	GEANY_KEYS_FILE_CLOSE,						/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_REPLACETABS,			/**< Keybinding. */
+	GEANY_KEYS_FILE_RELOAD,						/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDNEXTSEL,				/**< Keybinding. */
+	GEANY_KEYS_FOCUS_MESSAGES,					/**< Keybinding. */
+	GEANY_KEYS_BUILD_RUN,						/**< Keybinding. */
 	GEANY_KEYS_HELP_HELP,						/**< Keybinding. */
+	GEANY_KEYS_SETTINGS_PLUGINPREFERENCES,		/**< Keybinding. */
+	GEANY_KEYS_VIEW_ZOOMRESET,					/**< Keybinding. */
+	GEANY_KEYS_SELECT_WORD,						/**< Keybinding. */
+	GEANY_KEYS_FORMAT_INCREASEINDENT,			/**< Keybinding. */
+	GEANY_KEYS_SETTINGS_PREFERENCES,			/**< Keybinding. */
+	GEANY_KEYS_FORMAT_SENDTOCMD3,				/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_FOLDALL,				/**< Keybinding. */
+	GEANY_KEYS_FORMAT_SENDTOVTE,				/**< Keybinding. */
+	GEANY_KEYS_PROJECT_PROPERTIES,				/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_LINEWRAP,				/**< Keybinding. */
+	GEANY_KEYS_EDITOR_MACROLIST,				/**< Keybinding. */
+	GEANY_KEYS_EDITOR_SUPPRESSSNIPPETCOMPLETION, /**< Keybinding. */
+	GEANY_KEYS_FOCUS_SIDEBAR_SYMBOL_LIST,		/**< Keybinding. */
+	GEANY_KEYS_GOTO_LINESTART,					/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDUSAGE,				/**< Keybinding. */
+	GEANY_KEYS_FILE_NEW,						/**< Keybinding. */
+	GEANY_KEYS_EDITOR_SNIPPETNEXTCURSOR,		/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_SWITCHTABRIGHT,			/**< Keybinding. */
+	GEANY_KEYS_FILE_SAVE,						/**< Keybinding. */
+	GEANY_KEYS_FORMAT_INCREASEINDENTBYSPACE,	/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDNEXT,					/**< Keybinding. */
+	GEANY_KEYS_GOTO_TOGGLEMARKER,				/**< Keybinding. */
+	GEANY_KEYS_GOTO_TAGDEFINITION,				/**< Keybinding. */
+	GEANY_KEYS_SEARCH_NEXTMESSAGE,				/**< Keybinding. */
+	GEANY_KEYS_EDITOR_DELETELINETOEND,			/**< Keybinding. */
+	GEANY_KEYS_FORMAT_AUTOINDENT,				/**< Keybinding. */
+	GEANY_KEYS_FILE_OPENSELECTED,				/**< Keybinding. */
+	GEANY_KEYS_GOTO_BACK,						/**< Keybinding. */
+	GEANY_KEYS_INSERT_DATE,						/**< Keybinding. */
+	GEANY_KEYS_BUILD_PREVIOUSERROR,				/**< Keybinding. */
+	GEANY_KEYS_GOTO_LINEENDVISUAL,				/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_REPLACESPACES,			/**< Keybinding. */
+	GEANY_KEYS_FOCUS_EDITOR,					/**< Keybinding. */
+	GEANY_KEYS_SELECT_WORDPARTRIGHT,			/**< Keybinding. */
+	GEANY_KEYS_VIEW_MESSAGEWINDOW,				/**< Keybinding. */
+	GEANY_KEYS_FOCUS_SIDEBAR_DOCUMENT_LIST,		/**< Keybinding. */
+	GEANY_KEYS_FORMAT_REFLOWPARAGRAPH,			/**< Keybinding. */
+	GEANY_KEYS_EDITOR_MOVELINEUP,				/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_MOVETABLEFT,			/**< Keybinding. */
+	GEANY_KEYS_SELECT_LINE,						/**< Keybinding. */
+	GEANY_KEYS_EDITOR_UNDO,						/**< Keybinding. */
+	GEANY_KEYS_EDITOR_MOVELINEDOWN,				/**< Keybinding. */
+	GEANY_KEYS_CLIPBOARD_COPYLINE,				/**< Keybinding. */
+	GEANY_KEYS_BUILD_MAKEOWNTARGET,				/**< Keybinding. */
+	GEANY_KEYS_FORMAT_SENDTOCMD2,				/**< Keybinding. */
+	GEANY_KEYS_SEARCH_MARKALL,					/**< Keybinding. */
+	GEANY_KEYS_BUILD_LINK,						/**< Keybinding. */
+	GEANY_KEYS_FILE_CLOSEALL,					/**< Keybinding. */
+	GEANY_KEYS_GOTO_FORWARD,					/**< Keybinding. */
+	GEANY_KEYS_CLIPBOARD_CUT,					/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_SWITCHTABLASTUSED,		/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_MOVETABRIGHT,			/**< Keybinding. */
+	GEANY_KEYS_BUILD_OPTIONS,					/**< Keybinding. */
+	GEANY_KEYS_GOTO_TAGDECLARATION,				/**< Keybinding. */
+	GEANY_KEYS_FILE_OPEN,						/**< Keybinding. */
+	GEANY_KEYS_EDITOR_COMPLETESNIPPET,			/**< Keybinding. */
+	GEANY_KEYS_FORMAT_UNCOMMENTLINE,			/**< Keybinding. */
+	GEANY_KEYS_FOCUS_VTE,						/**< Keybinding. */
+	GEANY_KEYS_FORMAT_SENDTOCMD1,				/**< Keybinding. */
+	GEANY_KEYS_SELECT_WORDPARTLEFT,				/**< Keybinding. */
+	GEANY_KEYS_VIEW_ZOOMIN,						/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_LINEBREAK,				/**< Keybinding. */
+	GEANY_KEYS_EDITOR_REDO,						/**< Keybinding. */
+	GEANY_KEYS_EDITOR_CONTEXTACTION,			/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDPREVSEL,				/**< Keybinding. */
+	GEANY_KEYS_FORMAT_DECREASEINDENTBYSPACE,	/**< Keybinding. */
+	GEANY_KEYS_FORMAT_COMMENTLINETOGGLE,		/**< Keybinding. */
+	GEANY_KEYS_SELECT_ALL,						/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_RELOADTAGLIST,			/**< Keybinding. */
+	GEANY_KEYS_BUILD_NEXTERROR,					/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_MOVETABLAST,			/**< Keybinding. */
+	GEANY_KEYS_SELECT_PARAGRAPH,				/**< Keybinding. */
+	GEANY_KEYS_EDITOR_DELETELINE,				/**< Keybinding. */
+	GEANY_KEYS_CLIPBOARD_COPY,					/**< Keybinding. */
+	GEANY_KEYS_VIEW_SIDEBAR,					/**< Keybinding. */
+	GEANY_KEYS_FILE_SAVEAS,						/**< Keybinding. */
+	GEANY_KEYS_FORMAT_COMMENTLINE,				/**< Keybinding. */
+	GEANY_KEYS_GOTO_PREVWORDPART,				/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDPREVIOUS,				/**< Keybinding. */
+	GEANY_KEYS_SEARCH_REPLACE,					/**< Keybinding. */
+	GEANY_KEYS_EDITOR_WORDPARTCOMPLETION,		/**< Keybinding. */
+	GEANY_KEYS_EDITOR_AUTOCOMPLETE,				/**< Keybinding. */
+	GEANY_KEYS_FOCUS_SIDEBAR,					/**< Keybinding. */
+	GEANY_KEYS_FOCUS_MESSAGE_WINDOW,			/**< Keybinding. */
+	GEANY_KEYS_NOTEBOOK_MOVETABFIRST,			/**< Keybinding. */
+	GEANY_KEYS_GOTO_PREVIOUSMARKER,				/**< Keybinding. */
+	GEANY_KEYS_EDITOR_SCROLLLINEUP,				/**< Keybinding. */
+	GEANY_KEYS_FOCUS_COMPILER,					/**< Keybinding. */
+	GEANY_KEYS_FORMAT_TOGGLECASE,				/**< Keybinding. */
+	GEANY_KEYS_CLIPBOARD_CUTLINE,				/**< Keybinding. */
+	GEANY_KEYS_DOCUMENT_REMOVE_MARKERS,			/**< Keybinding. */
+	GEANY_KEYS_BUILD_MAKEOBJECT,				/**< Keybinding. */
+	GEANY_KEYS_FORMAT_DECREASEINDENT,			/**< Keybinding. */
+	GEANY_KEYS_FILE_OPENLASTTAB,				/**< Keybinding. */
+	GEANY_KEYS_SEARCH_FINDINFILES,				/**< Keybinding. */
+	GEANY_KEYS_GOTO_NEXTWORDPART,				/**< Keybinding. */
 	GEANY_KEYS_COUNT	/* must not be used by plugins */
 };
 
