@@ -14,6 +14,8 @@
  * src/editor.c:
    Revert r4840 scope completion mode as it sometimes breaks
    autocompletion.
+ * src/keybindings.h, src/plugindata.h:
+   Randomly sort keybinding IDs to show there should be no order.
 
 
 2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
